--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
+  <title>Bootstrap vs Tailwind CSS</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-50 text-gray-900 font-sans">
+  <header class="bg-blue-600 text-white p-6 shadow-md">
+    <h1 class="text-3xl font-bold text-center">Bootstrap vs Tailwind CSS</h1>
+    <nav> 
+      <ul class="text-center mt-2 space-x-4">
+        <li><a href="index.html" class="underline">Home</a></li>
+        <li><a href="comparison.html" class="underline">Comparison</a></li>
+        <li><a href="features.html" class="underline">Features</a></li>
+        <li><a href="use-cases.html" class="underline">Use Cases</a></li>
+        <li><a href="interactivity.html" class="underline">Vote</a></li>
+        <li><a href="quiz.html" class="underline">Quiz</a></li>
+        <li><a href="references.html" class="underline">References</a></li>
+      </ul>
+    </nav>
+    <script src="script.js"></script>
+  </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | CSS Frameworks</title>
@@ -10,24 +35,22 @@
 </head>
 <body>
   <header>
-    <h1>Bootstrap vs Tailwind CSS</h1>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="comparison.html">Comparison</a></li>
-        <li><a href="features.html">Features</a></li>
-        <li><a href="quiz.html">Quiz</a></li>
-        <li><a href="references.html">References</a></li>
-      </ul>
-    </nav>
-  </header>
   <main>
     <section>
-      <h2>Welcome</h2>
-      <p>This site explores two major CSS frameworks—Bootstrap and Tailwind CSS—comparing their strengths, weaknesses, and suitability for different projects.</p>
+      <h1 class="text-3xl font-bold text-center mb-4">Welcome to CSS Frameworks Analysis</h1>
+      <p class="text-center mb-6">This site explores two major CSS frameworks— Bootstrap and Tailwind CSS—comparing their strengths, weaknesses, and suitability for different projects.</p>
     </section>
     <section>
-      <h3>Explore:</h3>
+      <h2 class="text-2xl font-bold mb-4">Overview</h2>
+      <p>Bootstrap is a component-based framework that provides pre-designed UI components, while Tailwind CSS is a utility-first framework that allows for more granular control over styles.</p>  
+    <section>
+      <h2 class="text-2xl font-bold mb-4">What You Will Learn</h2>
+      <p>This site provides an overview of Bootstrap and Tailwind CSS, including:</p>
+      <ul>
+        <li>Key features and differences</li>
+        <li>Use cases and best practices</li>
+        <li>Interactive quizzes to test your knowledge</li>
+      
       <ul>
         <li>Responsive Design Strategies</li>
         <li>JavaScript Integration</li>
