--- a/quiz.html
+++ b/quiz.html
@@ -1,44 +1,175 @@
-<!-- quiz.html -->
+<!-- quiz.html -->  
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz | CSS Frameworks</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
-</head>
-<body>
-  <header>
-    <h1>Framework Quiz</h1>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="comparison.html">Comparison</a></li>
-        <li><a href="features.html">Features</a></li>
-        <li><a href="quiz.html">Quiz</a></li>
-        <li><a href="references.html">References</a></li>
-      </ul>
-    </nav>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
+  <title>Bootstrap vs Tailwind Quiz</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  </head>
+<body class="bg-gray-50 text-gray-900 font-sans">
+  <header class="bg-blue-600 text-white p-6 shadow-md">
+    <h1 class="text-3xl font-bold text-center">Bootstrap vs Tailwind CSS: Self Assessment Quiz</h1>
+ <nav class="text-center mt-2 space-x-4"> 
+    <ul>
+      <li><a href="index.html" class="underline">Home</a></li>
+        <li><a href="comparison.html" class="underline">Comparison</a></li>
+        <li><a href="features.html" class="underline">Features</a></li>
+         <li><a href="use-cases.html" class="underline">Use Cases</a></li>
+      <li><a href="quiz.html" class="underline">Quiz</a></li>
+      </li><a href="interactivity.html" class="underline">Vote</a></li>
+      <li><a href="references.html" class="underline">References</a></li>
+    </ul>
+  </nav>
+  <script src="script.js"></script>
+
   </header>
-  <main>
-    <form id="quizForm">
-      <fieldset>
-        <legend>Which framework is utility-first?</legend>
-        <label><input type="radio" name="q1" value="bootstrap"> Bootstrap</label><br>
-        <label><input type="radio" name="q1" value="tailwind"> Tailwind</label>
-      </fieldset>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 700px;
+      margin: auto;
+    }
+    h1 {
+      text-align: center;
+    }
+    .question {
+      margin-bottom: 20px;
+    }
+    .hidden {
+      display: none;
+    }
+    .results {
+      margin-top: 30px;
+      padding: 20px;
+      border: 1px solid #ccc;
+      background: #f9f9f9;
+    }
+    button {
+      margin-top: 10px;
+    }
+</style>
+ 
+<div class="container">
+    <h1>Responsive Design Quiz</h1>
+    <h1>Test your knowledge!</h1>
+  </div>
+  <script src="script.js"></script>
+  <form id="quizForm">
+    <div class="question">
+      <p>1. Which framework uses utility-first classes?</p>
+      <label><input type="radio" name="q1" value="Tailwind" /> Tailwind</label><br />
+      <label><input type="radio" name="q1" value="Bootstrap" /> Bootstrap</label><br />
+      <label><input type="radio" name="q1" value="Both" /> Both</label>
+    </div>
 
-      <fieldset>
-        <legend>Which framework includes JS components?</legend>
-        <label><input type="radio" name="q2" value="bootstrap"> Bootstrap</label><br>
-        <label><input type="radio" name="q2" value="tailwind"> Tailwind</label>
-      </fieldset>
+    <div class="question">
+      <p>2. Which of the following is NOT a feature of Bootstrap?</p>
+      <label><input type="radio" name="q2" value="Grid system" /> Grid system</label><br />
+      <label><input type="radio" name="q2" value="Utility-first approach" /> Utility-first approach</label><br />
+      <label><input type="radio" name="q2" value="JavaScript components" /> JavaScript components</label>
+    </div>
 
-      <button type="submit">Submit</button>
-    </form>
-    <div id="quizResult"></div>
-  </main>
+    <div class="question">
+      <p>3. Which framework provides prebuilt UI components by default?</p>
+      <label><input type="radio" name="q3" value="Tailwind" /> Tailwind</label><br />
+      <label><input type="radio" name="q3" value="Bootstrap" /> Bootstrap</label><br />
+      <label><input type="radio" name="q3" value="None" /> None</label>
+    </div>
+
+<div class="question">
+  <p>4. Fill in the blank: Tailwind CSS allows _______________ customization using utility classes.</p>
+  <input type="text" name="q4" id="q4Input" placeholder="Your answer here"/>
+</div>
+
+<!-- Output Area -->
+<p><strong>Your answer here:</strong> <span id="q4Input"></span></p>
+<script>
+  // Display input live
+  document.addEventListener('DOMContentLoaded', function() {
+    const input = document.getElementById('q4Input');
+    const output = document.getElementById('q4Display');
+    if (input && output) {
+      input.addEventListener('input', () => {
+        output.textContent = input.value;
+      });
+    }
+   });
+</script>
+
+    <div class="question">
+      <p>5. Which of the following are true about Tailwind CSS? (Select all that apply)</p>
+      <label><input type="checkbox" name="q5" value="Utility classes" /> Utility classes</label><br />
+      <label><input type="checkbox" name="q5" value="Predefined themes" /> Predefined themes</label><br />
+      <label><input type="checkbox" name="q5" value="Custom design flexibility" /> Custom design flexibility</label>
+    </div>
+
+   
+    <button type="submit" onclick="submitQuiz()" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">Submit Quiz</button>
+    <button type="button" onclick="resetQuiz()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Restart Quiz</button>
+  </form>
+   <div id="results" class="results hidden"></div>
+
+  <script>
+    function resetQuiz() {
+      document.getElementById("quizForm").reset();
+      document.getElementById("results").classList.add("hidden");
+    }
+
+    document.getElementById("quizForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const answers = {
+        q1: "Tailwind",
+        q2: "Utility-first approach",
+        q3: "Bootstrap",
+        q4: "high",
+        q5: ["Utility classes", "Custom design flexibility"]
+      };
+
+      let score = 0;
+      const total = 5;
+      const userAnswers = new FormData(e.target);
+      const results = [];
+
+      // Question 1-3 (single choice)
+      ["q1", "q2", "q3"].forEach((q) => {
+        const correct = answers[q];
+        const user = userAnswers.get(q);
+        if (user === correct) score++;
+        results.push(`Q${q[1]}: Your answer: ${user || "None"} | Correct: ${correct}`);
+      });
+
+      // Question 4 (fill in the blank)
+      let userQ4 = userAnswers.get("id=q4Input");
+      userQ4 = userQ4 ? userQ4.trim().toLowerCase() : "";
+      const correctQ4 = answers.q4;
+      if (userQ4 === correctQ4) score++;
+      results.push(`Q4: Your answer: ${userQ4 || "None"} | Correct: ${correctQ4}`);
+
+      // Question 5 (multiple correct)
+      const userQ5 = userAnswers.getAll("q5");
+      const correctQ5 = answers.q5;
+      const isCorrectQ5 =
+        userQ5.length === correctQ5.length &&
+        userQ5.every((val) => correctQ5.includes(val));
+      if (isCorrectQ5) score++;
+      results.push(`Q5: Your answer: ${userQ5.join(", ") || "None"} | Correct: ${correctQ5.join(", ")}`);
+
+      const passed = score >= 4;
+
+      document.getElementById("results").innerHTML = `
+        <h2>Results</h2>
+        <p>Total Score: ${score} / ${total}</p>
+        <p>Status: <strong>${passed ? "PASS" : "FAIL"}</strong></p>
+        <hr>
+        ${results.map((r) => `<p>${r}</p>`).join("")}
+      `;
+      document.getElementById("results").classList.remove("hidden");
+    });
+  </script>
   <footer>
     <p>&copy; 2025 CSS Frameworks Analysis</p>
   </footer>
