--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header>
   <main>
     <section>
-      <h1 class="text-3xl font-bold text-center mb-4">Welcome to CSS Frameworks Analysis</h1>
+      <h1 class="text-3xl bg-purple-400 font-bold text-center mb-4">Welcome to CSS Frameworks Analysis</h1>
       <p class="text-center mb-6">This site explores two major CSS frameworks— Bootstrap and Tailwind CSS—comparing their strengths, weaknesses, and suitability for different projects.</p>
     </section>
     <section>
@@ -60,7 +60,7 @@
       <img src="images/css-comparison.png" alt="CSS Frameworks Comparison" class="responsive-img">
     </section>
   </main>
-  <footer>
+  <footer class="bg-blue-800 text-white p-4 text-center">
     <p>&copy; 2025 CSS Frameworks Analysis</p>
   </footer>
 </body>
