--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css">
   <title>Bootstrap vs Tailwind CSS</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script defer src="script.js"></script>
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans">
   <header class="bg-blue-600 text-white p-6 shadow-md">
     <h1 class="text-3xl font-bold text-center">Bootstrap vs Tailwind CSS</h1>
-    <nav> 
-      <ul class="text-center mt-2 space-x-4">
+    <nav>
+      <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
+      <ul class="menu text-center mt-2 space-x-4" id="mainMenu">
         <li><a href="index.html" class="underline">Home</a></li>
         <li><a href="comparison.html" class="underline">Comparison</a></li>
         <li><a href="features.html" class="underline">Features</a></li>
@@ -22,19 +23,7 @@
         <li><a href="references.html" class="underline">References</a></li>
       </ul>
     </nav>
-    <script src="script.js"></script>
   </header>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | CSS Frameworks</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
-</head>
-<body>
-  <header>
   <main>
     <section>
       <h1 class="text-3xl bg-purple-400 font-bold text-center mb-4">Welcome to CSS Frameworks Analysis</h1>
@@ -43,6 +32,7 @@
     <section>
       <h2 class="text-2xl font-bold mb-4">Overview</h2>
       <p>Bootstrap is a component-based framework that provides pre-designed UI components, while Tailwind CSS is a utility-first framework that allows for more granular control over styles.</p>  
+    </section>
     <section>
       <h2 class="text-2xl font-bold mb-4">What You Will Learn</h2>
       <p>This site provides an overview of Bootstrap and Tailwind CSS, including:</p>
@@ -50,8 +40,6 @@
         <li>Key features and differences</li>
         <li>Use cases and best practices</li>
         <li>Interactive quizzes to test your knowledge</li>
-      
-      <ul>
         <li>Responsive Design Strategies</li>
         <li>JavaScript Integration</li>
         <li>Customization Techniques</li>
@@ -63,5 +51,11 @@
   <footer class="bg-blue-800 text-white p-4 text-center">
     <p>&copy; 2025 CSS Frameworks Analysis</p>
   </footer>
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('mainMenu');
+      menu.classList.toggle('show');
+    }
+  </script>
 </body>
 </html>
